Added Java 8 Support